Vibe code crud ops
